# slab-render

./: .gitignore  CMakeLists.txt  README.md  package-windows.sh  resources.qrc  slabrender.nsi  slabrender.rc
.github/workflows/: ci.yml  linux.yml  windows.yml
assets/blender/: axes_template.blend  probe_cards.py  render_image.py  rendertest.py
assets/configuration/: atoms.json
assets/shaders/: axes.vs  phong.fs
assets/tooltips/: custom_json_example.txt
installer/: saucepan.nsi  slabrender.nsi
scripts/: euler_angles.py
src/: atom.cpp  atom.h  atom_settings.cpp  atom_settings.h  bond.cpp  bond.h  color_picker_dialog.cpp  color_picker_dialog.h  color_wheel_widget.cpp  color_wheel_widget.h  config.h  jobinfowidget.cpp  jobinfowidget.h  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  matrixmath.h  periodic_table_dialog.cpp  periodic_table_dialog.h  render_atoms_widget.cpp  render_atoms_widget.h  rule_edit_dialog.cpp  rule_edit_dialog.h  rule_item_widget.cpp  rule_item_widget.h  structure.cpp  structure.h  structure_loader.cpp  structure_loader.h  structure_renderer.cpp  structure_renderer.h  threadrenderimage.cpp  threadrenderimage.h
src/visualization/: anaglyph_widget.cpp  anaglyph_widget.h  matrixmath.h  model.cpp  model.h  model_loader.cpp  model_loader.h  primitivebuilder.cpp  primitivebuilder.h  shader_program.cpp  shader_program.h  shader_program_manager.cpp  shader_program_manager.h  shader_program_types.h
